feat: enhancements
New reports added to the list:
-DP
-Epics
-Personal Stats